[package]
name = "gdg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.51"
enum-display = "0.2.1"
itertools = "0.14.0"
nonempty = "0.12.0"
petgraph = "0.8.3"
ratatui = "0.29.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tui-tree-widget = "0.23.1"
